--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Card Association Game Test</title>
+    <title>Book to Author Matching Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css">
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1 style="font-weight:bold">Card Association Game Test</h1>
+        <h1 style="font-weight:bold">Do You Know Your Authors? Then Match them to their books!</h1>
     </header>
     <main>
 	<br>
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <div> The Peru images used in this game were taken from different sources. They are all listed <a href="https://github.com/scinana/memory-card-game/blob/test1/README.md#attribution" style="font-weight:bold">here</a> together with their respective licenses.</div>
+        <div> The book covers and author names in this game have been shared for playing purposes, these do not imply any endorsement from the book authors. This game is free and I do not derive any profit from this, I just use it to practise my coding skills. The code used for this game is found <a href="https://github.com/scinana/CardAssociationGame" style="font-weight:bold">here</a> together with links to the repository from where the main part of this code was forked. If you want to leave any comments or get in touch, please do so at nana7milana@gmail.com </div>
 
     </footer>
     <script src="js/test.js"></script>
