--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
     <link rel="stylesheet" href="css/test.css">
 
-<meta property="og:url"                content="https://scinana.github.io/memory-card-game/" />
+<meta property="og:url"                content="https://scinana.github.io/CardAssociationGame/" />
 <meta property="og:type"               content="article" />
-<meta property="og:title"              content="Top Peruvian destinations you must visit - A Memory Game" />
-<meta property="og:description"        content="Peru is an amazingly attractive tourist destination! Do you know all of the places in this game?" />
-<meta property="og:image"              content="https://raw.githubusercontent.com/scinana/memory-card-game/test1/img/FacebookCard.PNG" />
+<meta property="og:title"              content="Books to Authors Matching Game" />
+<meta property="og:description"        content="Are you a book lover and know your authors really well? Try this game and see how many you can match!" />
+<meta property="og:image"              content="https://raw.githubusercontent.com/scinana/CardAssociationGame/main/img/FacebookCardBookGame.PNG" />
 	
 </head>
 
