--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta property="og:url"                content="https://scinana.github.io/CardAssociationGame/" />
 <meta property="og:type"               content="article" />
-<meta property="og:title"              content="Books to Authors Matching Game" />
+<meta property="og:title"              content="How many books can you match?" />
 <meta property="og:description"        content="Are you a book lover and know your authors really well? Try this game and see how many you can match!" />
 <meta property="og:image"              content="https://raw.githubusercontent.com/scinana/CardAssociationGame/main/img/FacebookCardBookGame.PNG" />
 	
