--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1 style="font-weight:bold">Do You Know Your Authors? Then Match them to their books!</h1>
+        <h1 style="font-weight:bold">How Well do You Know Your Authors?</h1> <br> Try matching them to their books below </h1>
     </header>
     <main>
 	<br>
