--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
 <body>
     <header>
-        <h1 style="font-weight:bold">How Well do You Know Your Authors?</h1> <br> Try matching them to their books below </h1>
+        <h1 style="font-weight:bold">How Well do You Know Your Authors?</h1>
     </header>
     <main>
 	<br>
-	Hello! For your best playing experience, please use the <span style="font-weight:bold">widest screen</span> possible (or use your mobile horizontally)!
+	Try matching the following books to their authors. For your best playing experience, please use the <span style="font-weight:bold">widest screen</span> possible (or use your mobile horizontally)!
         <section class="game">
             <ul class="stats">
                 <li id="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
