--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
 	<br>
-	Try matching the following books to their authors. For your best playing experience, please use the <span style="font-weight:bold">widest screen</span> possible (or use your mobile horizontally)!
+	Try matching the following books to their authors.
         <section class="game">
             <ul class="stats">
                 <li id="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
