--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
 	<br>
-	Try matching the following books to their authors.
+	Try matching the following books to their authors by clicking on the correct card pairs below!
         <section class="game">
             <ul class="stats">
                 <li id="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></li>
